@@ -1,1 +1,2 @@
 - Fixed an issue when Sliced Invoices status was manually updated to paid, entries weren't released from Sliced Invoices steps.
+- Fixed validation issue in Assignee, User and Multi-User fields
